infrastructure/vault/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      volumes:
        - name: vault
          persistentVolumeClaim:
            claimName: vault
      containers:
        - name: vault
          image: hashicorp/vault:1.12.1
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
          args:
            - vault server -config /vault/config/config.hcl -log-level=debug
          ports:
            - containerPort: 8200
              protocol: TCP
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            # capabilities:
            #   drop:
            #     - ALL
            #   add:
            #     - IPC_LOCK
            #     - SETFCAP
          volumeMounts:
            - mountPath: /vault
              name: vault
              readOnly: false
          readinessProbe:
            exec:
              command: ["/bin/sh", "-ec", "vault version"]
          # livenessProbe:
          #   httpGet:
          #     path: /v1/sys/health?standbyok=true
          #     port: 8200
          #     scheme: HTTPS
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          startupProbe:
            exec:
              command: ["/bin/sh", "-ec", "vault version"]
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 25m
              memory: 10Mi
...
