infrastructure/vault/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  labels:
    app: vault
spec:
  type: ClusterIP
  selector:
    app: vault
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 8200
...
